--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/Ajnastk/namaste-react#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.49",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.15"
   },
   "dependencies": {
     "react": "^18.3.1",
